--- a/WEgudok/src/app/explore-container/explore-container.component.html
+++ b/WEgudok/src/app/explore-container/explore-container.component.html
@@ -1,4 +1,6 @@
 <div id="container">
-  <strong>{{ name }}</strong>
-  <p>Explore <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+  <!-- <strong>{{ name }}</strong> -->
+  <p>총 구독 금액</p>
+  <p><strong>70,000원</strong></p>
+  <p>현 계좌 금액 : 1,000,000</p>
 </div>
