--- a/WEgudok/src/app/explore-container/explore-container.component.scss
+++ b/WEgudok/src/app/explore-container/explore-container.component.scss
@@ -1,11 +1,11 @@
 #container {
-  text-align: center;
-
-  position: absolute;
+  text-align: left;
+  position: relative;
   left: 0;
   right: 0;
-  top: 50%;
-  transform: translateY(-50%);
+  top: 55%;
+  margin: 20px;
+  
 }
 
 #container strong {
@@ -17,7 +17,7 @@
   font-size: 16px;
   line-height: 22px;
 
-  color: #8c8c8c;
+  color: #000000;
 
   margin: 0;
 }
