--- a/WEgudok/src/app/tab1/tab1.page.html
+++ b/WEgudok/src/app/tab1/tab1.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Tab 1
+      구독 서비스
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -9,9 +9,85 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Tab 1</ion-title>
+      <ion-title size="large">구독 서비스</ion-title>
     </ion-toolbar>
   </ion-header>
 
-  <app-explore-container name="Tab 1 page"></app-explore-container>
+  <app-explore-container name="Tab 2 page"></app-explore-container>
+  
+
+  <ion-list id="gudok-list" (click)="initModal()">
+    <ion-card>
+    <ion-item id="gudok-item">
+      <ion-thumbnail item-start>
+        <img src="../../pictures/netflix.png">
+      </ion-thumbnail>
+      <ion-label>
+        <h2>20,000원</h2>
+        <p>결제일: 2021.12.05</p>
+      </ion-label>
+      
+    </ion-item>
+    <ion-progress-bar value="0.5"></ion-progress-bar>
+  </ion-card>
+  </ion-list>
+
+
+  <ion-list id="gudok-list">
+    <ion-card>
+    <ion-item id="gudok-item">
+      <ion-thumbnail item-start>
+        <img src="../../pictures/netflix.png">
+      </ion-thumbnail>
+      <ion-label>
+        <h2>20,000원</h2>
+        <p>결제일: 2021.12.05</p>
+      </ion-label>
+      
+    </ion-item>
+    <ion-progress-bar value="0.5"></ion-progress-bar>
+  </ion-card>
+  </ion-list>
+
+
+    <ion-list id="gudok-list">
+   <ion-card>
+    <ion-item id="gudok-item">
+      <ion-thumbnail item-start>
+        <img src="../../pictures/netflix.png">
+      </ion-thumbnail>
+      <ion-label>
+        <h2>20,000원</h2>
+        <p>결제일: 2021.12.05</p>
+      </ion-label>
+      
+    </ion-item>
+    <ion-progress-bar value="0.5"></ion-progress-bar>
+  </ion-card>
+  </ion-list>
+
+
+  <ion-list id="gudok-list">
+    <ion-card>
+    <ion-item id="gudok-item">
+      <ion-thumbnail item-start>
+        <img src="../../pictures/netflix.png">
+      </ion-thumbnail>
+      <ion-label>
+        <h2>20,000원</h2>
+        <p>결제일: 2021.12.05</p>
+      </ion-label>
+      
+    </ion-item>
+    <ion-progress-bar value="0.5"></ion-progress-bar>
+  </ion-card>
+  </ion-list>
+
+
+  <ion-fab vertical="bottom" horizontal="end" slot="fixed">
+    <ion-fab-button>
+      <ion-icon name="add"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
+  
 </ion-content>
