--- a/WEgudok/src/app/tab3/tab3.page.html
+++ b/WEgudok/src/app/tab3/tab3.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Tab 3
+      캘린더
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -9,9 +9,46 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Tab 3</ion-title>
+      <ion-title size="large">캘린더</ion-title>
     </ion-toolbar>
   </ion-header>
 
-  <app-explore-container name="Tab 3 page"></app-explore-container>
+    <ion-card>
+
+    <ion-calendar [(ngModel)]="date"
+              (change)="onChange($event)"
+              [type]="type"
+              [format]="'YYYY-MM-DD'">
+    </ion-calendar>
+  </ion-card>
+
+  <ion-list>
+    <ion-list-header>
+      결제 항목
+    </ion-list-header>
+
+    <ion-item id="subs-item">
+      <ion-thumbnail item-start>
+        <img src="../../pictures/netflix.png">
+      </ion-thumbnail>
+      <ion-label >
+        <h3>Netflix</h3>
+        <p>20,000원</p>
+      </ion-label>
+    </ion-item>
+
+    <ion-item id="subs-item">
+      <ion-thumbnail item-start>
+        <img src="../../pictures/netflix.png">
+      </ion-thumbnail>
+      <ion-label >
+        <h3>Netflix</h3>
+        <p>20,000원</p>
+      </ion-label>
+    </ion-item>
+    
+  </ion-list>
+
+  
+
 </ion-content>
