--- a/WEgudok/src/app/tabs/tabs.page.html
+++ b/WEgudok/src/app/tabs/tabs.page.html
@@ -2,18 +2,18 @@
 
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="tab1">
-      <ion-icon name="triangle"></ion-icon>
-      <ion-label>Tab 1</ion-label>
+      <ion-icon name="wallet"></ion-icon>
+      <ion-label>구독</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab2">
-      <ion-icon name="ellipse"></ion-icon>
-      <ion-label>Tab 2</ion-label>
+      <ion-icon name="bar-chart"></ion-icon>
+      <ion-label>그래프</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab3">
-      <ion-icon name="square"></ion-icon>
-      <ion-label>Tab 3</ion-label>
+      <ion-icon name="calendar-number"></ion-icon>
+      <ion-label>캘린더</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 
