--- a/WEgudok/src/app/app-modal/app-modal.page.html
+++ b/WEgudok/src/app/app-modal/app-modal.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>결제 정보</ion-title>
+    <ion-title>구독 정보</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -52,7 +52,7 @@
   </div>
 
   <div id="comment">
-    <p>1달에 치킨과 치즈볼을 1번 참으시면<br>이 서비스를 계속 이용하실 수 있습니다.</p>
+    <p>🍗1달에 치킨과 치즈볼을1번 참으시면<br>이 서비스를 계속 이용하실 수 있습니다.</p>
     <ion-button size="small" color="light" (click)="close()">Close</ion-button>
   </div>
 
