--- a/WEgudok/src/app/tab1/tab1.page.html
+++ b/WEgudok/src/app/tab1/tab1.page.html
@@ -83,9 +83,11 @@
   </ion-card>
   </ion-list>
 
+  <!-- <p *ngIf="dataReturned">{{dataReturned}}</p> -->
+
 
   <ion-fab vertical="bottom" horizontal="end" slot="fixed">
-    <ion-fab-button>
+    <ion-fab-button (click)="openModal()">
       <ion-icon name="add"></ion-icon>
     </ion-fab-button>
   </ion-fab>
