--- a/WEgudok/src/app/app-modal/app-modal.page.scss
+++ b/WEgudok/src/app/app-modal/app-modal.page.scss
@@ -15,3 +15,13 @@
 #info-grid ion-row{
     margin-bottom: 10px;
 }
+#back ion-title{
+    float: left;
+}
+#back ion-icon{
+    float: left;
+    margin-left: 10px;
+    margin-top: 0px;
+    font-size: 20px;
+    font-weight: bold;
+}
