--- a/WEgudok/src/app/add-modal/add-modal.page.html
+++ b/WEgudok/src/app/add-modal/add-modal.page.html
@@ -31,7 +31,9 @@
 
     <ion-item>
       <ion-label>구독 시작</ion-label>
-      <ion-datetime value="2021-05-01" display-timezone="utc" displayFormat="YYYY년 M월 D일"></ion-datetime>
+      <ion-datetime min="1999-01" value="2021-05-01" display-timezone="utc" displayFormat="YYYY년 MMM D일" placeholder="시작 날짜"
+      monthShortNames="1월,2월,3월,4월,5월,6월,7월,8월,9월,10월,11월,12월"
+      monthName="1월,2월,3월,4월,5월,6월,7월,8월,9월,10월,11월,12월"></ion-datetime>
     </ion-item>
   </ion-list>
 
