--- a/WEgudok/src/app/app-modal/app-modal.page.html
+++ b/WEgudok/src/app/app-modal/app-modal.page.html
@@ -10,44 +10,45 @@
 <ion-content>
   
   <div id="app-info">
-    <img src="../../pictures/netflix.png">
-    <p>{{ name }}</p>
+    <img src="assets/images/netflix.png">
+    <h5><strong>{{ name }}</strong></h5>
   </div>
+
 
   <div>
     <ion-grid id="info-grid">
       <ion-row>
-        <ion-col>
-          Member Since
+        <ion-col id="col1">
+          구독 시작
         </ion-col>
-        <ion-col>
+        <ion-col id="col2">
           2018.10.05
         </ion-col>
       </ion-row>
 
       <ion-row>
-        <ion-col>
+        <ion-col id="col1">
           총 구독 금액
         </ion-col>
-        <ion-col>
+        <ion-col id="col2">
           600,000원
         </ion-col>
       </ion-row>
 
       <ion-row>
-        <ion-col>
+        <ion-col id="col1">
           1개월 구독료
         </ion-col>
-        <ion-col>
+        <ion-col id="col2">
           20,000원
         </ion-col>
       </ion-row>
 
       <ion-row>
-        <ion-col>
+        <ion-col id="col1">
           12개월 구독료
         </ion-col>
-        <ion-col>
+        <ion-col id="col2">
           240,000원
         </ion-col>
       </ion-row>
