--- a/WEgudok/src/app/tab1/tab1.page.scss
+++ b/WEgudok/src/app/tab1/tab1.page.scss
@@ -1,4 +1,42 @@
 #gudok-item ion-label{
     text-align: right;
+    margin-top: 0;
 }
 
+#icon img{
+    border-radius: 10px;
+    width: 80%;
+    height: 80%;
+}
+
+#icon ion-thumbnail{
+    margin-left: -10px;
+}
+
+#gudok-list ion-card{
+    margin-bottom: 0;
+    padding-top: 5px;
+}
+
+#gudok-item{
+    background-color:#f5f5f5;;
+}
+
+ion-progress-bar{
+  width: 95%;
+  padding: 4px;
+  border-radius: 10px;
+  margin-top: -2%;
+  margin-left: 2%;
+  margin-right: 2%;
+}
+
+#paydate{
+    font-size: 8px;
+    text-align: right;
+    margin-right: 5%;
+}
+
+ion-fab{
+
+}
