--- a/WEgudok/src/app/tab2/tab2.page.html
+++ b/WEgudok/src/app/tab2/tab2.page.html
@@ -21,6 +21,7 @@
       [datasets]="barChartData"
       [labels]="barChartLabels"
       [options]="barChartOptions"
+      [colors]="chartColors"
       [legend]="barChartLegend"
       [chartType]="barChartType"
       (chartHover)="chartHovered($event)"
