--- a/WEgudok/src/app/tab3/tab3.page.scss
+++ b/WEgudok/src/app/tab3/tab3.page.scss
@@ -1,3 +1,17 @@
 #subs-item ion-label{
     text-align: right;
 }
+
+#icon img{
+    border-radius: 10px;
+    width: 80%;
+    height: 80%;
+}
+
+#calendar{
+    padding: 0;
+}
+
+#calendar ion-calendar{
+    height: 60%;
+}
