--- a/WEgudok/src/app/tab1/tab1.page.html
+++ b/WEgudok/src/app/tab1/tab1.page.html
@@ -15,6 +15,9 @@
 
   <app-explore-container name="Tab 2 page"></app-explore-container>
   
+  <ion-buttons end>
+    <button ion-button icon-only (click)="getTransactions()"><ion-icon name="check"></ion-icon></button>
+  </ion-buttons>
 
   <ion-list id="gudok-list" (click)="initModal()">
     <ion-card>
