--- a/WEgudok/src/app/app-modal/app-modal.page.scss
+++ b/WEgudok/src/app/app-modal/app-modal.page.scss
@@ -39,3 +39,10 @@
     text-align: right;
     color: gray;
 }
+
+#infotable{
+    font-size: 15px;
+    margin: 10px;
+    border-radius: 30px;
+    background-color: #f2f2f2;
+}
