--- a/WEgudok/src/app/tab2/tab2.page.html
+++ b/WEgudok/src/app/tab2/tab2.page.html
@@ -32,9 +32,8 @@
   </div>
 
   <div id="amount">
-    <p>현재 구독료를 포함한 이번 달 </p>
-    <p>소비 금액은 </p>
-    <h2>260,000원</h2>
+    <p>현재 구독료를 포함한 <br>이번 달 소비 금액은💸 </p>
+    <h3>260,000원</h3>
   </div>
 
 
