--- a/WEgudok/src/app/tab3/tab3.page.scss
+++ b/WEgudok/src/app/tab3/tab3.page.scss
@@ -8,10 +8,6 @@
     height: 80%;
 }
 
-#calendar{
-    padding: 0;
-}
-
 #calendar ion-calendar{
-    height: 60%;
+    background-color:  #f2f5fa;
 }
