--- a/WEgudok/src/app/explore-container/explore-container.component.html
+++ b/WEgudok/src/app/explore-container/explore-container.component.html
@@ -1,6 +1,6 @@
 <div id="container">
   <!-- <strong>{{ name }}</strong> -->
-  <p>총 구독 금액</p>
-  <p><strong>70,000원</strong></p>
-  <p>현 계좌 금액 : 1,000,000</p>
+  <p id="text">총 구독 금액</p>
+  <p id="total_amount">70,000원</p>
+  <p id="current_amount">현 계좌 금액 : 1,000,000</p>
 </div>
