--- a/WEgudok/src/app/tab1/tab1.page.html
+++ b/WEgudok/src/app/tab1/tab1.page.html
@@ -26,7 +26,9 @@
     <button ion-button icon-only (click)="getTransactions()"><ion-icon name="check"></ion-icon></button>
   </ion-buttons>
 
- 
+
+
+ <div id="mainlist">
   <ion-list id="gudok-list" (click)="initModal()">
     <ion-card>
     <ion-item id="gudok-item" lines="none">
@@ -38,8 +40,12 @@
         <h2>20,000원</h2>
       </ion-label>
     </ion-item>
-    <ion-progress-bar [value]="progress" ></ion-progress-bar>
-    <p id="paydate">결제일: 2021.12.05</p>
+    <ion-progress-bar id="progressbar" [value]="progress" ></ion-progress-bar>
+    <div id="alerticon" lines="none">
+      <ion-icon item-start color="danger" name="alert-circle"></ion-icon> 
+     결제 3일 남음!
+    </div>
+    <p id="paydate">결제일: 2021.06.05</p>
   </ion-card>
   </ion-list>
 
@@ -54,7 +60,11 @@
         <h2>3,000원</h2>
       </ion-label>
     </ion-item>
-    <ion-progress-bar [value]="progress" ></ion-progress-bar>
+    <ion-progress-bar id="progressbar" [value]="progress" ></ion-progress-bar>
+    <div id="alerticon" lines="none">
+      <ion-icon item-start color="danger" name="alert-circle"></ion-icon> 
+     결제 3일 남음!
+    </div>
     <p id="paydate">결제일: 2021.06.05</p>
   </ion-card>
   </ion-list>
@@ -71,8 +81,12 @@
         <h2>20,000원</h2>
       </ion-label>
     </ion-item>
-    <ion-progress-bar [value]="progress" ></ion-progress-bar>
-    <p id="paydate">결제일: 2021.12.05</p>
+    <ion-progress-bar id="progressbar" [value]="progress" ></ion-progress-bar>
+    <div id="alerticon" lines="none">
+      <ion-icon item-start color="danger" name="alert-circle"></ion-icon> 
+     결제 3일 남음!
+    </div>
+    <p id="paydate">결제일: 2021.06.05</p>
   </ion-card>
   </ion-list>
 
@@ -88,10 +102,16 @@
         <h2>20,000원</h2>
       </ion-label>
     </ion-item>
-    <ion-progress-bar [value]="progress" ></ion-progress-bar>
-    <p id="paydate">결제일: 2021.12.05</p>
+    <ion-progress-bar id="progressbar" [value]="progress" ></ion-progress-bar>
+    <div id="alerticon" lines="none">
+      <ion-icon item-start color="danger" name="alert-circle"></ion-icon> 
+     결제 3일 남음!
+    </div>
+    <p id="paydate">결제일: 2021.06.05</p>
   </ion-card>
   </ion-list>
+
+</div>
 
 
 
