--- a/WEgudok/src/app/tab1/tab1.page.scss
+++ b/WEgudok/src/app/tab1/tab1.page.scss
@@ -1,3 +1,5 @@
+
+
 #gudok-item ion-label{
     text-align: right;
     margin-top: 0;
@@ -7,6 +9,7 @@
     border-radius: 10px;
     width: 80%;
     height: 80%;
+    margin-top: 0px;
 }
 
 #icon ion-thumbnail{
@@ -14,7 +17,7 @@
 }
 
 #gudok-list ion-card{
-    margin-bottom: 0;
+    margin: 4px 10px 3px 10px;
     padding-top: 5px;
 }
 
@@ -22,11 +25,11 @@
     background-color:#f5f5f5;;
 }
 
-ion-progress-bar{
+#progressbar{
   width: 95%;
   padding: 4px;
   border-radius: 10px;
-  margin-top: -2%;
+  margin-top: 0;
   margin-left: 2%;
   margin-right: 2%;
 }
@@ -35,8 +38,19 @@ ion-progress-bar{
     font-size: 8px;
     text-align: right;
     margin-right: 5%;
+    float: right;
 }
 
-ion-fab{
+
+#alerticon {
+    display: inline-block;
+    margin: 2% 0 0 2%;
+    font-size: 10px;
+    color: #f53d3d;
+    vertical-align: middle;
 
 }
+#alerticon ion-icon {
+    font-size: 8px;
+}
+   
