--- a/WEgudok/src/app/login/login.page.html
+++ b/WEgudok/src/app/login/login.page.html
@@ -10,9 +10,9 @@
     <ion-col size="12" size-sm="10" offset-sm="1" size-md="8" offset-md="2" size-lg="6" offset-lg="3" size-xl="4"
       offset-xl="4">
  
-      <ion-card>
+      <ion-card id="logincard">
         <ion-card-header>
-          <ion-card-title class="ion-text-center">WE구독</ion-card-title>
+          <ion-card-title class="ion-text-center"><img id="wegudoktitle" src="./assets/images/wegudoktitle.png"></ion-card-title>
         </ion-card-header>
  
         <ion-card-content>
