--- a/WEgudok/src/app/add-modal/add-modal.page.scss
+++ b/WEgudok/src/app/add-modal/add-modal.page.scss
@@ -15,3 +15,15 @@
     margin-left: 15px;
     margin-bottom:-10px;
 }
+
+#text{
+    color: #488aff;
+    font-size: 12px;
+}
+
+#add{
+    background-color:#f7f7f7;
+    border-radius: 15px;
+    padding: 10px;
+    margin: 5px;
+}
