--- a/WEgudok/src/app/tab2/tab2.page.scss
+++ b/WEgudok/src/app/tab2/tab2.page.scss
@@ -1,3 +1,7 @@
+ion-content{
+  --background: #fff url('../../assets/images/background1.png') no-repeat center center / cover;
+}
+
 .chartWrapper {
     position: relative;
     overflow-x: scroll;
