--- a/WEgudok/src/app/tab3/tab3.page.html
+++ b/WEgudok/src/app/tab3/tab3.page.html
@@ -7,11 +7,11 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
+  <!-- <ion-header collapse="condense">
     <ion-toolbar>
       <ion-title size="large">캘린더</ion-title>
     </ion-toolbar>
-  </ion-header>
+  </ion-header> -->
 
   <div id="calendar">
   <ion-calendar [(ngModel)]="date"
