css almost complete

--- a/WEgudok/src/app/register/register.page.html
+++ b/WEgudok/src/app/register/register.page.html
@@ -24,7 +24,7 @@
 
     <ion-item lines="none">
       <ion-label position="stacked">전화번호</ion-label>
-      <ion-input type="text"  placeholder="전화번호를 입력하세요."[(ngModel)]="phoneNumber" [textMask]="{mask: masks.phoneNumber}" required ></ion-input>
+      <ion-input type="text"  placeholder="전화번호를 입력하세요."[(ngModel)]="phoneNumber"  required ></ion-input>
     </ion-item>
 
     <ion-item lines="none">
