--- a/WEgudok/src/app/tab3/tab3.page.html
+++ b/WEgudok/src/app/tab3/tab3.page.html
@@ -28,11 +28,11 @@
       </ion-thumbnail>
       <ion-label >
         <h3>Netflix</h3>
-        <p>20,000원</p>
+        <p>14,500원</p>
       </ion-label>
     </ion-item>
 
-    <ion-item id="subs-item">
+    <!-- <ion-item id="subs-item">
       <ion-thumbnail item-start id="icon">
         <img src="assets/images/netflix.png">
       </ion-thumbnail>
@@ -40,7 +40,7 @@
         <h3>Netflix</h3>
         <p>20,000원</p>
       </ion-label>
-    </ion-item>
+    </ion-item> -->
     
   </ion-list>
 
