--- a/WEgudok/src/app/tab1/tab1.page.html
+++ b/WEgudok/src/app/tab1/tab1.page.html
@@ -34,15 +34,15 @@
       </ion-thumbnail>
       <ion-label>
         <p>Netflix</p>
-        <h2>20,000원</h2>
+        <h2>14,500원</h2>
       </ion-label>
     </ion-item>
-    <ion-progress-bar id="progressbar" [value]="progress" ></ion-progress-bar>
+    <ion-progress-bar id="progressbar" value=0.95 ></ion-progress-bar>
     <div id="alerticon" lines="none">
       <ion-icon item-start color="danger" name="alert-circle"></ion-icon> 
-     결제 3일 남음!
+     결제 2일 남음!
     </div>
-    <p id="paydate">결제일: 2021.06.05</p>
+    <p id="paydate">결제일: 2021.05.05</p>
   </ion-card>
   </ion-list>
 
@@ -54,15 +54,12 @@
       </ion-thumbnail>
       <ion-label>
         <p>Youtube</p>
-        <h2>3,000원</h2>
+        <h2>1,0450원</h2>
       </ion-label>
     </ion-item>
-    <ion-progress-bar id="progressbar" [value]="progress" ></ion-progress-bar>
-    <div id="alerticon" lines="none">
-      <ion-icon item-start color="danger" name="alert-circle"></ion-icon> 
-     결제 3일 남음!
-    </div>
-    <p id="paydate">결제일: 2021.06.05</p>
+    <ion-progress-bar id="progressbar" value=0.55 ></ion-progress-bar>
+    
+    <p id="paydate">결제일: 2021.05.15</p>
   </ion-card>
   </ion-list>
 
@@ -71,19 +68,16 @@
     <ion-card>
     <ion-item id="gudok-item" lines="none">
       <ion-thumbnail id="icon" item-start> 
-        <img src="assets/images/netflix.png">
+        <img src="assets/images/melon.png">
       </ion-thumbnail>
       <ion-label>
-        <p>Netflix</p>
-        <h2>20,000원</h2>
+        <p>멜론</p>
+        <h2>10,900원</h2>
       </ion-label>
     </ion-item>
-    <ion-progress-bar id="progressbar" [value]="progress" ></ion-progress-bar>
-    <div id="alerticon" lines="none">
-      <ion-icon item-start color="danger" name="alert-circle"></ion-icon> 
-     결제 3일 남음!
-    </div>
-    <p id="paydate">결제일: 2021.06.05</p>
+    <ion-progress-bar id="progressbar" value=0.57 ></ion-progress-bar>
+   
+    <p id="paydate">결제일: 2021.05.14</p>
   </ion-card>
   </ion-list>
 
@@ -92,19 +86,17 @@
     <ion-card>
     <ion-item id="gudok-item" lines="none">
       <ion-thumbnail id="icon" item-start> 
-        <img src="assets/images/netflix.png">
+        <img src="assets/images/adobe.png">
       </ion-thumbnail>
       <ion-label>
-        <p>Netflix</p>
-        <h2>20,000원</h2>
+        <p>Adobe</p>
+        <h2>35,200원</h2>
       </ion-label>
     </ion-item>
-    <ion-progress-bar id="progressbar" [value]="progress" ></ion-progress-bar>
-    <div id="alerticon" lines="none">
-      <ion-icon item-start color="danger" name="alert-circle"></ion-icon> 
-     결제 3일 남음!
-    </div>
-    <p id="paydate">결제일: 2021.06.05</p>
+    <ion-progress-bar id="progressbar" value=0.65 ></ion-progress-bar>
+
+     
+    <p id="paydate">결제일: 2021.05.10</p>
   </ion-card>
   </ion-list>
 
